Bug: PRD Reviewer: Jay Wootton Comment: Fixed the comments widget in the "view details" page so the date/time doesn't overlap with the actions menu.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -69,7 +69,7 @@
 .activityStreamActionsTable
 {
 	position: absolute;
-	right: 5px;
+	right: 0px;
 	top: 0px;
 	z-index: 300;
 }
@@ -287,8 +287,7 @@
 	font-size: 10px;
 	color: #666666;
 	display: inline;
-	padding-right: 10px;
-	white-space: nowrap;
+	padding-right: 70px;
 	vertical-align: top;
 }
 
